# ki2

./: .gitignore  AGENTS.md  Cargo.toml  LOCAL_FUNCTION_PARITY_MAP.md  LOCAL_PARSER_BFS_RECORD.md  LOCAL_PARSER_PARITY_NOTES.md  PARITY_BACKLOG.md  justfile
src/: connectivity.rs  core.rs  diagnostic.rs  erc.rs  error.rs  lib.rs  loader.rs  main.rs  model.rs  netlist.rs  parser.rs  sexpr.rs  sim.rs  token.rs  worksheet.rs
tests/: erc_lib_symbol_mismatch.rs  validate.rs
tests/fixtures/: hierarchical.kicad_sch  sample.kicad_sch  sub_sheet.kicad_sch
