[package]
name = "ki2"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "pnm", "tiff", "webp"] }
kiutils_rs = { package = "kiutils-rs", path = "../kiutils-rs/crates/kiutils" }
kiutils_sexpr = { path = "../kiutils-rs/crates/kiutils_sexpr" }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
