[package]
name = "ki2"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "pnm", "tiff", "webp"] }
libc = "0.2"
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
uuid = { version = "1", features = ["v4"] }
